--- a/playbooks/mq_cer_renewal.yml
+++ b/playbooks/mq_cer_renewal.yml
@@ -3,8 +3,11 @@
 - name: IBM MQ Certificate Renewal
   hosts: all_servers
   serial: 1
-  gather_facts: true
   max_fail_percentage: 10
+  become: true
+  gather_facts: true
+  
+  
 
   roles:
     - common_cert_ops
